--- a/myapp/src/global.css
+++ b/myapp/src/global.css
@@ -8,14 +8,51 @@
     src: url('../src/fonts/Sutherla-Romance-Sans-Serif.otf') format('opentype');
 }
 
-@font-face {
-    font-family: 'Sutherla';
-    src: url('') format('opentype');
-}
-
 :root {
     --button-main-color: #89FFFF;
-  }
+}
+
+body {
+    background-color: #050116; /* Set your desired background color */
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+
+    width: 100vw;
+    height: 100vw;
+}
+
+html, body {
+    height: 100%;
+    overflow-x: hidden;	
+}
+
+.spaceman {
+    position: absolute;
+    z-index: -10;
+    bottom: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+body::-webkit-scrollbar {
+width: 1em;
+}
+
+body::-webkit-scrollbar-track {
+    background-color: #434148;
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3)
+}
+
+body::-webkit-scrollbar-thumb {
+    background-color: #37808d8e;
+    width: .5em;
+    border-radius: 5px;
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
 
 .main-page-content .home{
     background: rgb(217,217,217);
